fixed spacing for new role

--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ a.home-link:hover .role {
   font-size: 20px;
   font-family: 'Josefin Sans', sans-serif;
   letter-spacing: 0.15px;
+  margin-left: 3%;
   color: #414141; }
 
 .site-nav {
@@ -545,6 +546,7 @@ a.nav:hover {
     letter-spacing: 1px; }
   .role {
     font-size: 16px;
+    margin-left: 1%;
     letter-spacing: 0.03px;
     padding-top: 2px; }
   .site-nav {
